// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderToJson ErrorBoundary should correctly render the tree that's inside an ErrorBoundary 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [],
          "children": Array [
            Object {
              "attributes": Array [
                Array [
                  "charset",
                  "utf-8",
                ],
              ],
              "children": Array [],
              "element": "meta",
            },
            Object {
              "attributes": Array [
                Array [
                  "http-equiv",
                  "x-ua-compatible",
                ],
                Array [
                  "content",
                  "IE=edge",
                ],
              ],
              "children": Array [],
              "element": "meta",
            },
            Object {
              "attributes": Array [],
              "children": Array [
                "Page Title",
              ],
              "element": "title",
            },
            Object {
              "attributes": Array [
                Array [
                  "name",
                  "viewport",
                ],
                Array [
                  "content",
                  "width=device-width, initial-scale=1",
                ],
              ],
              "children": Array [],
              "element": "meta",
            },
            Object {
              "attributes": Array [
                Array [
                  "rel",
                  "stylesheet",
                ],
                Array [
                  "type",
                  "text/css",
                ],
                Array [
                  "media",
                  "screen",
                ],
                Array [
                  "href",
                  "main.css",
                ],
              ],
              "children": Array [],
              "element": "link",
            },
          ],
          "element": "head",
        },
        Object {
          "attributes": Array [],
          "children": Array [
            Object {
              "attributes": Array [
                Array [
                  "class",
                  "main-container",
                ],
              ],
              "children": Array [
                Object {
                  "attributes": Array [],
                  "children": Array [
                    Object {
                      "attributes": Array [],
                      "children": Array [
                        "Hello World!",
                      ],
                      "element": "h2",
                    },
                    Object {
                      "attributes": Array [
                        Array [
                          "value",
                          "write here",
                        ],
                      ],
                      "children": Array [],
                      "element": "input",
                    },
                    Object {
                      "attributes": Array [
                        Array [
                          "style",
                          undefined,
                        ],
                      ],
                      "children": Array [
                        "Submit",
                      ],
                      "element": "button",
                    },
                  ],
                  "element": "",
                },
              ],
              "element": "div",
            },
          ],
          "element": "body",
        },
      ],
      "element": "html",
    },
  ],
  "element": "",
}
`;

exports[`renderToJson ErrorBoundary should render the fallback if a nested async child throws an error 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        "Async test:",
      ],
      "element": "span",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        "Oops. Something went wrong.",
      ],
      "element": "h1",
    },
  ],
  "element": "html",
}
`;

exports[`renderToJson ErrorBoundary should render the fallback if a nested child throws an error 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        "Oops. Something went wrong.",
      ],
      "element": "h1",
    },
  ],
  "element": "html",
}
`;

exports[`renderToJson ErrorBoundary should render the fallback if the direct child throws an error 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [],
          "children": Array [
            "Oops. Something went wrong.",
          ],
          "element": "h1",
        },
      ],
      "element": "body",
    },
  ],
  "element": "html",
}
`;

exports[`renderToJson errors error throw should contain information on which place in the tree the error occurred scenario 1 1`] = `
[JsxteRenderError: The below error has occurred in:
<html>
<body>
<div>
<Failing>

Rendering has failed due to an error: I'm failing]
`;

exports[`renderToJson errors error throw should contain information on which place in the tree the error occurred scenario 2 1`] = `
[JsxteRenderError: The below error has occurred in:
<Main>
<html>
<body>
<div>
<Failing>

Rendering has failed due to an error: I'm failing]
`;

exports[`renderToJson errors error throw should contain information on which place in the tree the error occurred scenario 3 1`] = `
[JsxteRenderError: The below error has occurred in:
<Main>
<Html>
<html>
<body>
<div>
<Wrapper>
<div>
<FailsEventually>
<span>
<Failing>

Rendering has failed due to an error: I'm failing]
`;

exports[`renderToJson errors error throw should contain information on which place in the tree the error occurred scenario 4 1`] = `
[JsxteRenderError: The below error has occurred in:
<Main>
<Html>
<html>
<body>
<div>
<Wrapper>
<div>
<FailsEventually>
<span>
<Failing>

Rendering has failed due to an error: I'm failing async]
`;

exports[`renderToJson errors error throw should contain information on which place in the tree the error occurred scenario 5 1`] = `
[JsxteRenderError: The below error has occurred in:
<Main>
<Html>
<html>
<body>
<div>
<Wrapper>
<div>
<FailsEventually>
<span>
<Failing>

Rendering has failed due to an error: I'm failing async]
`;

exports[`renderToJson should correctly generate html from component base jsx structure 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Array [
              "charset",
              "utf-8",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [
            Array [
              "http-equiv",
              "x-ua-compatible",
            ],
            Array [
              "content",
              "IE=edge",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [],
          "children": Array [
            "Page Title",
          ],
          "element": "title",
        },
        Object {
          "attributes": Array [
            Array [
              "name",
              "viewport",
            ],
            Array [
              "content",
              "width=device-width, initial-scale=1",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [
            Array [
              "rel",
              "stylesheet",
            ],
            Array [
              "type",
              "text/css",
            ],
            Array [
              "media",
              "screen",
            ],
            Array [
              "href",
              "main.css",
            ],
          ],
          "children": Array [],
          "element": "link",
        },
      ],
      "element": "head",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Array [
              "class",
              "main-container",
            ],
          ],
          "children": Array [
            Object {
              "attributes": Array [],
              "children": Array [
                Object {
                  "attributes": Array [],
                  "children": Array [
                    "Hello World!",
                  ],
                  "element": "h2",
                },
                Object {
                  "attributes": Array [
                    Array [
                      "value",
                      "write here",
                    ],
                  ],
                  "children": Array [],
                  "element": "input",
                },
                Object {
                  "attributes": Array [
                    Array [
                      "style",
                      undefined,
                    ],
                  ],
                  "children": Array [
                    "Submit",
                  ],
                  "element": "button",
                },
              ],
              "element": "",
            },
          ],
          "element": "div",
        },
      ],
      "element": "body",
    },
  ],
  "element": "html",
}
`;

exports[`renderToJson should correctly generate html from simple jsx 1`] = `
Object {
  "attributes": Array [
    Array [
      "id",
      "container",
    ],
    Array [
      "class",
      "bordered active",
    ],
  ],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        "Hello World",
      ],
      "element": "h1",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        "Prop Title",
      ],
      "element": "h2",
    },
    Object {
      "attributes": Array [
        Array [
          "onclick",
          "console.log(\\"Hello World!\\")",
        ],
      ],
      "children": Array [
        "Click me!",
      ],
      "element": "button",
    },
    Object {
      "attributes": Array [
        Array [
          "autofocus",
          true,
        ],
        Array [
          "disabled",
          false,
        ],
        Array [
          "draggable",
          true,
        ],
      ],
      "children": Array [],
      "element": "input",
    },
  ],
  "element": "div",
}
`;

exports[`renderToJson should correctly handle component children of type nulls, undefined and other 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        "Undef: ",
        Object {
          "attributes": Array [],
          "children": Array [],
          "element": "span",
        },
      ],
      "element": "div",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        "Null: ",
        Object {
          "attributes": Array [],
          "children": Array [],
          "element": "span",
        },
      ],
      "element": "div",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        "True: ",
        Object {
          "attributes": Array [],
          "children": Array [],
          "element": "span",
        },
      ],
      "element": "div",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        "False: ",
        Object {
          "attributes": Array [],
          "children": Array [],
          "element": "span",
        },
      ],
      "element": "div",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        "Str: ",
        Object {
          "attributes": Array [],
          "children": Array [
            "Hello World",
          ],
          "element": "span",
        },
      ],
      "element": "div",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        "Num: ",
        Object {
          "attributes": Array [],
          "children": Array [
            "1234",
          ],
          "element": "span",
        },
      ],
      "element": "div",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        "Arr: ",
        Object {
          "attributes": Array [],
          "children": Array [
            "hi",
            "423",
          ],
          "element": "span",
        },
      ],
      "element": "div",
    },
  ],
  "element": "div",
}
`;

exports[`renderToJson should correctly handle components returning nulls, undefined and other types 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        "Undef: ",
        "",
      ],
      "element": "div",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        "Null: ",
        "",
      ],
      "element": "div",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        "True: ",
        "",
      ],
      "element": "div",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        "False: ",
        "",
      ],
      "element": "div",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        "Str: ",
        "Hello World",
      ],
      "element": "div",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        "Num: ",
        "1234",
      ],
      "element": "div",
    },
  ],
  "element": "div",
}
`;

exports[`renderToJson should correctly parse async components 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Array [
              "charset",
              "utf-8",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [
            Array [
              "http-equiv",
              "x-ua-compatible",
            ],
            Array [
              "content",
              "IE=edge",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [],
          "children": Array [
            "Page Title",
          ],
          "element": "title",
        },
        Object {
          "attributes": Array [
            Array [
              "name",
              "viewport",
            ],
            Array [
              "content",
              "width=device-width, initial-scale=1",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [
            Array [
              "rel",
              "stylesheet",
            ],
            Array [
              "type",
              "text/css",
            ],
            Array [
              "media",
              "screen",
            ],
            Array [
              "href",
              "main.css",
            ],
          ],
          "children": Array [],
          "element": "link",
        },
      ],
      "element": "head",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Array [
              "class",
              "main-container",
            ],
          ],
          "children": Array [
            Object {
              "attributes": Array [],
              "children": Array [
                Object {
                  "attributes": Array [],
                  "children": Array [
                    "Async title",
                  ],
                  "element": "h2",
                },
                Object {
                  "attributes": Array [
                    Array [
                      "value",
                      "write here",
                    ],
                  ],
                  "children": Array [],
                  "element": "input",
                },
                Object {
                  "attributes": Array [
                    Array [
                      "style",
                      undefined,
                    ],
                  ],
                  "children": Array [
                    "Submit",
                  ],
                  "element": "button",
                },
              ],
              "element": "",
            },
          ],
          "element": "div",
        },
      ],
      "element": "body",
    },
  ],
  "element": "html",
}
`;

exports[`renderToJson should correctly perform sub renders async render rendered component can access the context defined on the parent 1`] = `
Object {
  "attributes": Array [
    Array [
      "class",
      "main",
    ],
  ],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        "{\\"element\\":\\"div\\",\\"attributes\\":[],\\"children\\":[\\"async foo\\"]}",
        "{\\"element\\":\\"div\\",\\"attributes\\":[],\\"children\\":[\\"async foo\\"]}",
        "{\\"element\\":\\"div\\",\\"attributes\\":[],\\"children\\":[\\"async bar\\"]}",
      ],
      "element": "div",
    },
  ],
  "element": "div",
}
`;

exports[`renderToJson should correctly perform sub renders async render renders a simple component 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    "{\\"element\\":\\"div\\",\\"attributes\\":[],\\"children\\":[\\"Hello World!\\"]}",
  ],
  "element": "div",
}
`;

exports[`renderToJson should correctly perform sub renders sync render rendered computer can access the context defined on the parent 1`] = `
Object {
  "attributes": Array [
    Array [
      "class",
      "main",
    ],
  ],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        "{\\"element\\":\\"div\\",\\"attributes\\":[],\\"children\\":[\\"foo\\"]}",
        "{\\"element\\":\\"div\\",\\"attributes\\":[],\\"children\\":[\\"foo\\"]}",
        "{\\"element\\":\\"div\\",\\"attributes\\":[],\\"children\\":[\\"bar\\"]}",
      ],
      "element": "div",
    },
  ],
  "element": "div",
}
`;

exports[`renderToJson should correctly perform sub renders sync render renders a simple component 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    "{\\"element\\":\\"div\\",\\"attributes\\":[],\\"children\\":[\\"Hello World!\\"]}",
  ],
  "element": "div",
}
`;

exports[`renderToJson should correctly render jsx with arrays in between elements 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        "Header",
      ],
      "element": "h1",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        "0",
      ],
      "element": "p",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        "1",
      ],
      "element": "p",
    },
    Object {
      "attributes": Array [],
      "children": Array [],
      "element": "footer",
    },
  ],
  "element": "div",
}
`;

exports[`renderToJson should correctly render objects implementing toHtmlTag symbol interface 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [],
          "children": Array [
            "John Doe",
          ],
          "element": "span",
        },
      ],
      "element": "div",
    },
  ],
  "element": "div",
}
`;

exports[`renderToJson should properly handle context data Provider and Consumer 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Array [
              "id",
              "root",
            ],
          ],
          "children": Array [
            Object {
              "attributes": Array [
                Array [
                  "id",
                  "1",
                ],
                Array [
                  "class",
                  "foo",
                ],
              ],
              "children": Array [
                "no value",
              ],
              "element": "div",
            },
            Object {
              "attributes": Array [
                Array [
                  "id",
                  "span-1",
                ],
              ],
              "children": Array [
                "no value",
              ],
              "element": "span",
            },
            Object {
              "attributes": Array [],
              "children": Array [
                Object {
                  "attributes": Array [
                    Array [
                      "id",
                      "2",
                    ],
                    Array [
                      "class",
                      "foo",
                    ],
                  ],
                  "children": Array [
                    "FOO",
                  ],
                  "element": "div",
                },
                Object {
                  "attributes": Array [
                    Array [
                      "id",
                      "span-2",
                    ],
                  ],
                  "children": Array [
                    "FOO",
                  ],
                  "element": "span",
                },
                Object {
                  "attributes": Array [],
                  "children": Array [
                    Object {
                      "attributes": Array [
                        Array [
                          "id",
                          "3",
                        ],
                        Array [
                          "class",
                          "foo",
                        ],
                      ],
                      "children": Array [
                        "BAR",
                      ],
                      "element": "div",
                    },
                    Object {
                      "attributes": Array [
                        Array [
                          "id",
                          "span-3",
                        ],
                      ],
                      "children": Array [
                        "BAR",
                      ],
                      "element": "span",
                    },
                  ],
                  "element": "",
                },
              ],
              "element": "",
            },
          ],
          "element": "div",
        },
      ],
      "element": "body",
    },
  ],
  "element": "html",
}
`;

exports[`renderToJson should properly handle context data close-by providers should not interfere with each other 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [],
          "children": Array [
            Object {
              "attributes": Array [],
              "children": Array [
                Object {
                  "attributes": Array [],
                  "children": Array [
                    "bar",
                  ],
                  "element": "p",
                },
              ],
              "element": "",
            },
            Object {
              "attributes": Array [],
              "children": Array [
                Object {
                  "attributes": Array [],
                  "children": Array [
                    "baz",
                  ],
                  "element": "p",
                },
              ],
              "element": "",
            },
            Object {
              "attributes": Array [],
              "children": Array [
                Object {
                  "attributes": Array [],
                  "children": Array [
                    "qux",
                  ],
                  "element": "p",
                },
              ],
              "element": "",
            },
            Object {
              "attributes": Array [],
              "children": Array [
                Object {
                  "attributes": Array [],
                  "children": Array [
                    "coorg",
                  ],
                  "element": "p",
                },
              ],
              "element": "",
            },
            Object {
              "attributes": Array [],
              "children": Array [
                Object {
                  "attributes": Array [],
                  "children": Array [
                    "fred",
                  ],
                  "element": "p",
                },
              ],
              "element": "",
            },
            Object {
              "attributes": Array [],
              "children": Array [
                Object {
                  "attributes": Array [],
                  "children": Array [
                    "thud",
                  ],
                  "element": "p",
                },
              ],
              "element": "",
            },
            Object {
              "attributes": Array [],
              "children": Array [
                "foo",
              ],
              "element": "p",
            },
          ],
          "element": "",
        },
      ],
      "element": "body",
    },
  ],
  "element": "html",
}
`;

exports[`renderToJson should properly handle context data correctly handles encapsulated providers 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Array [
              "id",
              "root",
            ],
          ],
          "children": Array [
            Object {
              "attributes": Array [],
              "children": Array [
                Object {
                  "attributes": Array [
                    Array [
                      "class",
                      "template for-magic",
                    ],
                  ],
                  "children": Array [
                    Object {
                      "attributes": Array [],
                      "children": Array [
                        Object {
                          "attributes": Array [],
                          "children": Array [
                            Object {
                              "attributes": Array [
                                Array [
                                  "type",
                                  "text",
                                ],
                                Array [
                                  "name",
                                  "repeating_magic_dwarf",
                                ],
                              ],
                              "children": Array [],
                              "element": "input",
                            },
                          ],
                          "element": "",
                        },
                      ],
                      "element": "div",
                    },
                  ],
                  "element": "div",
                },
              ],
              "element": "",
            },
          ],
          "element": "div",
        },
      ],
      "element": "body",
    },
  ],
  "element": "html",
}
`;

exports[`renderToJson should properly handle context data should correctly drill the prop data through multiple components 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [],
          "children": Array [
            Object {
              "attributes": Array [],
              "children": Array [
                Object {
                  "attributes": Array [],
                  "children": Array [
                    Object {
                      "attributes": Array [],
                      "children": Array [
                        Object {
                          "attributes": Array [],
                          "children": Array [
                            Object {
                              "attributes": Array [],
                              "children": Array [
                                Object {
                                  "attributes": Array [],
                                  "children": Array [
                                    Object {
                                      "attributes": Array [],
                                      "children": Array [
                                        Object {
                                          "attributes": Array [],
                                          "children": Array [
                                            Object {
                                              "attributes": Array [],
                                              "children": Array [
                                                "foo",
                                              ],
                                              "element": "p",
                                            },
                                          ],
                                          "element": "div",
                                        },
                                      ],
                                      "element": "div",
                                    },
                                  ],
                                  "element": "div",
                                },
                              ],
                              "element": "div",
                            },
                          ],
                          "element": "div",
                        },
                      ],
                      "element": "div",
                    },
                  ],
                  "element": "div",
                },
              ],
              "element": "div",
            },
          ],
          "element": "",
        },
      ],
      "element": "body",
    },
  ],
  "element": "html",
}
`;

exports[`renderToJson should properly handle context data should correctly handle provider pattern 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Array [
              "charset",
              "utf-8",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [
            Array [
              "http-equiv",
              "x-ua-compatible",
            ],
            Array [
              "content",
              "IE=edge",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [],
          "children": Array [
            "Page Title",
          ],
          "element": "title",
        },
        Object {
          "attributes": Array [
            Array [
              "name",
              "viewport",
            ],
            Array [
              "content",
              "width=device-width, initial-scale=1",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [
            Array [
              "rel",
              "stylesheet",
            ],
            Array [
              "type",
              "text/css",
            ],
            Array [
              "media",
              "screen",
            ],
            Array [
              "href",
              "main.css",
            ],
          ],
          "children": Array [],
          "element": "link",
        },
      ],
      "element": "head",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [],
          "children": Array [
            Object {
              "attributes": Array [
                Array [
                  "class",
                  "main-container",
                ],
              ],
              "children": Array [
                Object {
                  "attributes": Array [],
                  "children": Array [
                    Object {
                      "attributes": Array [],
                      "children": Array [
                        "Provided title",
                      ],
                      "element": "h1",
                    },
                  ],
                  "element": "div",
                },
              ],
              "element": "div",
            },
          ],
          "element": "body",
        },
      ],
      "element": "",
    },
  ],
  "element": "html",
}
`;

exports[`renderToJson should properly handle context data should correctly override existing context data 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Array [
              "charset",
              "utf-8",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [
            Array [
              "http-equiv",
              "x-ua-compatible",
            ],
            Array [
              "content",
              "IE=edge",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [],
          "children": Array [
            "Page Title",
          ],
          "element": "title",
        },
        Object {
          "attributes": Array [
            Array [
              "name",
              "viewport",
            ],
            Array [
              "content",
              "width=device-width, initial-scale=1",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [
            Array [
              "rel",
              "stylesheet",
            ],
            Array [
              "type",
              "text/css",
            ],
            Array [
              "media",
              "screen",
            ],
            Array [
              "href",
              "main.css",
            ],
          ],
          "children": Array [],
          "element": "link",
        },
      ],
      "element": "head",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [],
          "children": Array [
            Object {
              "attributes": Array [],
              "children": Array [
                "This title was overridden",
              ],
              "element": "h1",
            },
            Object {
              "attributes": Array [
                Array [
                  "placeholder",
                  "write here",
                ],
              ],
              "children": Array [],
              "element": "input",
            },
          ],
          "element": "",
        },
      ],
      "element": "body",
    },
  ],
  "element": "html",
}
`;

exports[`renderToJson should properly handle context data should correctly render jsx with context data 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Array [
              "charset",
              "utf-8",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [
            Array [
              "http-equiv",
              "x-ua-compatible",
            ],
            Array [
              "content",
              "IE=edge",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [],
          "children": Array [
            "Page Title",
          ],
          "element": "title",
        },
        Object {
          "attributes": Array [
            Array [
              "name",
              "viewport",
            ],
            Array [
              "content",
              "width=device-width, initial-scale=1",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [
            Array [
              "rel",
              "stylesheet",
            ],
            Array [
              "type",
              "text/css",
            ],
            Array [
              "media",
              "screen",
            ],
            Array [
              "href",
              "main.css",
            ],
          ],
          "children": Array [],
          "element": "link",
        },
      ],
      "element": "head",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Array [
              "class",
              "main-container",
            ],
          ],
          "children": Array [
            Object {
              "attributes": Array [],
              "children": Array [
                Object {
                  "attributes": Array [],
                  "children": Array [
                    "This title is set via the context",
                  ],
                  "element": "h1",
                },
              ],
              "element": "div",
            },
          ],
          "element": "div",
        },
      ],
      "element": "body",
    },
  ],
  "element": "html",
}
`;

exports[`renderToJson should properly handle context data should correctly render jsx with context data and arrays in between elements 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Array [
              "charset",
              "utf-8",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [
            Array [
              "http-equiv",
              "x-ua-compatible",
            ],
            Array [
              "content",
              "IE=edge",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [],
          "children": Array [
            "Page Title",
          ],
          "element": "title",
        },
        Object {
          "attributes": Array [
            Array [
              "name",
              "viewport",
            ],
            Array [
              "content",
              "width=device-width, initial-scale=1",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [
            Array [
              "rel",
              "stylesheet",
            ],
            Array [
              "type",
              "text/css",
            ],
            Array [
              "media",
              "screen",
            ],
            Array [
              "href",
              "main.css",
            ],
          ],
          "children": Array [],
          "element": "link",
        },
      ],
      "element": "head",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [],
          "children": Array [
            Object {
              "attributes": Array [],
              "children": Array [
                Object {
                  "attributes": Array [],
                  "children": Array [
                    "This title is set via the context",
                  ],
                  "element": "h1",
                },
              ],
              "element": "div",
            },
            Object {
              "attributes": Array [
                Array [
                  "placeholder",
                  "write here",
                ],
              ],
              "children": Array [],
              "element": "input",
            },
            Object {
              "attributes": Array [],
              "children": Array [
                "Submit",
              ],
              "element": "button",
            },
          ],
          "element": "",
        },
      ],
      "element": "body",
    },
  ],
  "element": "html",
}
`;

exports[`renderToJson should properly handle context data should correctly render jsx with context data and async components 1`] = `
Object {
  "attributes": Array [],
  "children": Array [
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [
            Array [
              "charset",
              "utf-8",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [
            Array [
              "http-equiv",
              "x-ua-compatible",
            ],
            Array [
              "content",
              "IE=edge",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [],
          "children": Array [
            "Page Title",
          ],
          "element": "title",
        },
        Object {
          "attributes": Array [
            Array [
              "name",
              "viewport",
            ],
            Array [
              "content",
              "width=device-width, initial-scale=1",
            ],
          ],
          "children": Array [],
          "element": "meta",
        },
        Object {
          "attributes": Array [
            Array [
              "rel",
              "stylesheet",
            ],
            Array [
              "type",
              "text/css",
            ],
            Array [
              "media",
              "screen",
            ],
            Array [
              "href",
              "main.css",
            ],
          ],
          "children": Array [],
          "element": "link",
        },
      ],
      "element": "head",
    },
    Object {
      "attributes": Array [],
      "children": Array [
        Object {
          "attributes": Array [],
          "children": Array [
            Object {
              "attributes": Array [],
              "children": Array [
                Object {
                  "attributes": Array [],
                  "children": Array [
                    "This title is set via the context",
                  ],
                  "element": "h1",
                },
              ],
              "element": "div",
            },
            Object {
              "attributes": Array [
                Array [
                  "placeholder",
                  "write here",
                ],
              ],
              "children": Array [],
              "element": "input",
            },
            Object {
              "attributes": Array [],
              "children": Array [
                "Submit",
              ],
              "element": "button",
            },
          ],
          "element": "",
        },
      ],
      "element": "body",
    },
  ],
  "element": "html",
}
`;
